--- a/About.html
+++ b/About.html
@@ -248,13 +248,21 @@
             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
             esse cillum dolore eu fugiat nulla pariatur.</p>
           <a href=""
-            class="u-active-palette-1-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-base u-radius-50 u-text-active-white u-text-hover-white u-text-palette-1-base u-white u-btn-1">read
-            more</a>
+            class="u-active-palette-1-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-base u-radius-50 u-text-active-white u-text-hover-white u-text-palette-1-base u-white u-btn-1">Download brochure 
+            </a>
+        </div>
+      </div>
+      <div class="alignitright u-align-left u-container-style u-gradient u-group u-group-1">
+        <div class="u-container-layout u-container-layout-1">
+          <h2 class="u-text u-text-body-alt-color u-text-default u-text-1">About Us</h2>
+          <p class="u-text u-text-body-alt-color u-text-2">Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
       </div>
     </div>
   </section>
-  <section class="u-clearfix u-expanded-width-xl u-image u-section-2" id="carousel_1182" data-image-width="1920"
+  <!-- <section class="upper_margin u-clearfix u-expanded-width-xl u-image u-section-2" id="carousel_1182" data-image-width="1920"
     data-image-height="987">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
@@ -373,8 +381,26 @@
         </div>
       </div>
     </div>
+  </section> -->
+  
+  <section class=" upper_margin u-clearfix u-grey-5 u-section-3" id="sec-ec75">
+    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <h3 class="u-text u-text-1">Our Vision<br>
+      </h3>
+      <p class="u-text u-text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation <a href=""
+          class="u-border-2 u-border-black u-border-hover-palette-1-base u-btn u-button-style u-none u-text-body-color u-btn-1">ullamco
+          laboris</a> nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+    </div>
   </section>
-  <section class="u-clearfix u-grey-5 u-section-3" id="sec-ec75">
+
+  <section class=" u-clearfix u-grey-5 u-section-3" id="sec-ec75">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <h3 class="u-text u-text-1">Why Us ?<br>
       </h3>
@@ -410,8 +436,8 @@
 
           <p class="text-center">Data science where the real magic begins and dreams comes ture </p>
 
-          <!-- <ul class="list-unstyled d-flex flex-row justify-content-center">
-            <li>
+           <ul class="list-unstyled d-flex flex-row justify-content-center">
+            <!-- <li>
               <a class="text-white px-2" href="#!">
                 <i class="fa fa-facebook-square"></i>
               </a>
@@ -426,7 +452,12 @@
                 <i class="fa fa-youtube"></i>
               </a>
             </li>
-          </ul> -->
+            <li> -->
+              <a class="text-white px-2" href="#!">
+                <i class="fa fa-linkedin-square"></i>
+              </a>
+            </li>
+          </ul> 
 
         </div>
         <!--Grid column-->
