--- a/Industries.html
+++ b/Industries.html
@@ -327,8 +327,8 @@
 
           <p class="text-center">Data science where the real magic begins and dreams comes ture </p>
 
-          <!-- <ul class="list-unstyled d-flex flex-row justify-content-center">
-            <li>
+           <ul class="list-unstyled d-flex flex-row justify-content-center">
+            <!-- <li>
               <a class="text-white px-2" href="#!">
                 <i class="fa fa-facebook-square"></i>
               </a>
@@ -342,8 +342,12 @@
               <a class="text-white ps-2" href="#!">
                 <i class="fa fa-youtube"></i>
               </a>
-            </li>
-          </ul> -->
+            </li> -->
+            <a class="text-white px-2" href="#!">
+              <i class="fa fa-linkedin-square"></i>
+            </a>
+          </li>
+          </ul>
 
         </div>
         <!--Grid column-->
