--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Bai+Jamjuree:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
   <link id="u-page-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Bai+Jamjuree:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     <script src="./JS-libraries/jquery.2.1.3.min.js"></script>
     <script src="./JS-libraries/geometryangle.min.js"></script>
 
@@ -290,19 +293,65 @@
         senectus et netus. Id cursus metus aliquam eleifend mi in. Quis commodo odio aenean sed. Sollicitudin ac orci
         phasellus egestas tellus. Id velit ut tortor pretium.<br>
       </p>
-      <img class="u-image u-image-contain u-image-default u-image-1" src="images/photo-1599658880436-c61792e70672.jfif"
-        alt="" data-image-width="1170" data-image-height="780">
+
+      <!-- <img class="u-image u-image-contain u-image-default u-image-1" src="images/photo-1599658880436-c61792e70672.jfif"
+        alt="" data-image-width="1170" data-image-height="780"> -->
+
+        
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./images/1.jpeg" class="carousel_img d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/dark-mobile-device-mockup_149660-787.jpg" class="carousel_img d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/temp_gif.gif" class="carousel_img d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
     </div>
   </section>
-  <section class="u-align-center u-clearfix u-white u-section-3" id="carousel_b13d">
+  <section class="background_gif u-align-center u-clearfix u-white u-section-3" id="carousel_b13d">
     <div class="u-clearfix u-sheet u-sheet-1">
       <h2 class="u-align-center u-text u-text-default u-text-1">Key Features</h2>
       <p class="u-text u-text-2">Sample text. Click to select the text box. Click again or double click to start editing
         the text.</p>
 
-      <img alt=""
+        <iframe src="./images/temp_gif.gif" frameborder="0"
         class=" responsive u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1"
-        src="./images/design_illustration.jpg" data-image-width="1200" data-image-height="800">
+        src="./images/dsf.jpg" data-image-width="1200" data-image-height="800">
+        ></iframe>
+          
+
+
 
       <div class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-list u-list-1">
         <div class="u-repeater u-repeater-1">
@@ -831,8 +880,8 @@
 
           <p class="text-center">Data science where the real magic begins and dreams comes ture </p>
 
-          <!-- <ul class="list-unstyled d-flex flex-row justify-content-center">
-            <li>
+          <ul class="list-unstyled d-flex flex-row justify-content-center">
+            <!-- <li>
               <a class="text-white px-2" href="#!">
                 <i class="fa fa-facebook-square"></i>
               </a>
@@ -846,8 +895,12 @@
               <a class="text-white ps-2" href="#!">
                 <i class="fa fa-youtube"></i>
               </a>
-            </li>
-          </ul> -->
+            </li> -->
+            <a class="text-white px-2" href="#!">
+              <i class="fa fa-linkedin-square"></i>
+            </a>
+          </li>
+          </ul>
 
         </div>
         <!--Grid column-->
