--- a/About.html
+++ b/About.html
@@ -78,7 +78,7 @@
           </a>
         </div>
         <div class="u-custom-menu u-nav-container">
-          <ul class="u-nav u-spacing-30 u-unstyled u-nav-1">
+          <ul class="text-left-mobileview u-nav u-spacing-30 u-unstyled u-nav-1">
             <li class="u-nav-item "><a
                 class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90"
                 href="index.html" style="padding: 10px 0px;">Home</a>
@@ -160,14 +160,14 @@
             class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
-              <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6">
+              <ul class="text-left-mobileview-padding u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6">
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="index.html"
                     style="padding: 10px 0px;">Home</a>
                 </li>
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="About.html"
                     style="padding: 10px 0px;">About</a>
                   <div class="u-nav-popup">
-                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-7">
+                    <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-7">
                       <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link"
                           href="About.html#carousel_b831" data-page-id="48129665">About Us</a>
                       </li>
@@ -183,7 +183,7 @@
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Industries.html"
                     style="padding: 10px 0px;">Industries</a>
                   <div class="u-nav-popup">
-                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-8">
+                    <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-8">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
                           data-page-id="976527205">Retail</a>
                       </li>
@@ -223,7 +223,7 @@
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Support.html"
                     style="padding: 10px 0px;">Support</a>
                   <div class="u-nav-popup">
-                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-10">
+                    <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-10">
                       <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link"
                           href="Support.html#sec-b7e7" data-page-id="521828048">FAQs</a>
                       </li>
