--- a/Industries.html
+++ b/Industries.html
@@ -30,9 +30,9 @@
   <meta property="og:type" content="website">
 </head>
 <div class="preloader">
-  <img class="preloader-image" src="./images/logo.jpg"  alt="">
+  <img class="preloader-image" src="./images/logo.jpg" alt="">
 </div>
-  <div class="preloaderlayer"></div>
+<div class="preloaderlayer"></div>
 <body class="u-body">
   <header class="fixedposition u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-dd13">
     <div class="u-clearfix u-sheet u-sheet-1">
@@ -155,14 +155,14 @@
             class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
-              <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6">
+              <ul class="text-left-mobileview u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6">
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="index.html"
                     style="padding: 10px 0px;">Home</a>
                 </li>
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="About.html"
                     style="padding: 10px 0px;">About</a>
                   <div class="u-nav-popup">
-                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-7">
+                    <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-7">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#carousel_b831"
                           data-page-id="48129665">About Us</a>
                       </li>
@@ -176,9 +176,9 @@
                   </div>
                 </li>
                 <li class="u-nav-item toMakeTextResponsive><a class="u-button-style u-nav-link" href="Industries.html"
-                    style="padding: 10px 0px;">Industries</a>
+                  style="padding: 10px 0px;">Industries</a>
                   <div class="u-nav-popup">
-                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-8">
+                    <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-8">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
                           data-page-id="976527205">Retail</a>
                       </li>
@@ -218,7 +218,7 @@
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Support.html"
                     style="padding: 10px 0px;">Support</a>
                   <div class="u-nav-popup">
-                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-10">
+                    <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-10">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Support.html#sec-b7e7"
                           data-page-id="521828048">FAQs</a>
                       </li>
@@ -232,7 +232,7 @@
         </div>
       </nav>
       <a href="index.html" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
-       <img src="./images/logo.jpg" class="positioninbetween u-logo-image u-logo-image-1">
+        <img src="./images/logo.jpg" class="positioninbetween u-logo-image u-logo-image-1">
       </a>
     </div>
   </header>
@@ -241,28 +241,31 @@
       <div class="u-expanded-width u-tab-links-align-justify u-tabs u-tabs-1">
         <ul class="u-spacing-30 u-tab-list u-unstyled" role="tablist">
           <li class="u-tab-item" role="presentation">
-            <a class="active u-active-palette-2-base u-button-style u-tab-link u-tab-link-1" id="link-tab-081f"
-              href="#tab-081f" role="tab" aria-controls="tab-081f" aria-selected="true">Retail</a>
+            <a class="removing_underline active u-active-palette-2-base u-button-style u-tab-link u-tab-link-1"
+              id="link-tab-081f" href="#tab-081f" role="tab" aria-controls="tab-081f" aria-selected="true">Retail</a>
           </li>
           <li class="u-tab-item" role="presentation">
-            <a class="u-active-palette-2-base u-button-style u-tab-link u-tab-link-2" id="link-tab-4d57"
-              href="#tab-4d57" role="tab" aria-controls="tab-4d57" aria-selected="false">Health Care</a>
+            <a class="removing_underline u-active-palette-2-base u-button-style u-tab-link u-tab-link-2"
+              id="link-tab-4d57" href="#tab-4d57" role="tab" aria-controls="tab-4d57" aria-selected="false">Health
+              Care</a>
           </li>
           <li class="u-tab-item" role="presentation">
-            <a class="u-active-palette-2-base u-button-style u-tab-link u-tab-link-3" id="link-tab-3a42"
-              href="#tab-3a42" role="tab" aria-controls="tab-3a42" aria-selected="false">Real Estate</a>
+            <a class="removing_underline u-active-palette-2-base u-button-style u-tab-link u-tab-link-3"
+              id="link-tab-3a42" href="#tab-3a42" role="tab" aria-controls="tab-3a42" aria-selected="false">Real
+              Estate</a>
           </li>
           <li class="u-tab-item u-tab-item-4" role="presentation">
-            <a class="u-active-palette-2-base u-button-style u-tab-link u-tab-link-4" id="tab-d7e7"
+            <a class="removing_underline u-active-palette-2-base u-button-style u-tab-link u-tab-link-4" id="tab-d7e7"
               href="#link-tab-d7e7" role="tab" aria-controls="link-tab-d7e7" aria-selected="false">Financial Sector</a>
           </li>
           <li class="u-tab-item u-tab-item-5" role="presentation">
-            <a class="u-active-palette-2-base u-button-style u-tab-link u-tab-link-5" id="tab-6219"
+            <a class="removing_underline u-active-palette-2-base u-button-style u-tab-link u-tab-link-5" id="tab-6219"
               href="#link-tab-6219" role="tab" aria-controls="link-tab-6219" aria-selected="false">Logistics</a>
           </li>
           <li class="u-tab-item" role="presentation">
-            <a class="u-active-palette-2-base u-button-style u-tab-link u-tab-link-6" id="link-tab-f599"
-              href="#tab-f599" role="tab" aria-controls="tab-f599" aria-selected="false">Manufacturing</a>
+            <a class="removing_underline u-active-palette-2-base u-button-style u-tab-link u-tab-link-6"
+              id="link-tab-f599" href="#tab-f599" role="tab" aria-controls="tab-f599"
+              aria-selected="false">Manufacturing</a>
           </li>
         </ul>
         <div class="u-tab-content">
@@ -295,16 +298,50 @@
             </div>
           </div>
           <div class="u-container-style u-tab-pane" id="tab-3a42" role="tabpanel" aria-labelledby="link-tab-3a42">
-            <div class="u-container-layout u-container-layout-3"></div>
+            <div class="u-container-layout u-container-layout-3"><h4 class="u-text u-text-default u-text-1">Description</h4>
+              <div class="u-align-left u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
+              <p class="u-text u-text-default u-text-2">We develop partnerships with leading companies and organizations
+                from around the globe to complement our expertise and deliver breakthrough results.&nbsp;We have
+                long-lasting partnerships and affiliations with like-minded organizations and leaders share our
+                commitment to deliver lasting results.</p>
+              <h4 class="u-text u-text-default u-text-3">information</h4>
+              <div class="u-border-3 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-line-2"></div>
+              <p class="u-text u-text-default u-text-4">Objectively innovate empowered manufactured products whereas
+                parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains.
+                Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</p>
+            </div>
           </div>
           <div class="u-container-style u-tab-pane" id="link-tab-d7e7" role="tabpanel" aria-labelledby="tab-d7e7">
-            <div class="u-container-layout u-container-layout-4"></div>
+            <div class="u-container-layout u-container-layout-4"><h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
+              <p class="u-text u-text-default u-text-6">In this article we will cover the BASICS of Who is Who and what
+                role they play in the South African Container Shipping industry..</p>
+              <ul class="u-text u-text-default u-text-7">
+                <li>Transnet Freight Rail (formerly known as Spoornet) </li>
+                <li>Transnet National Port Authority (formerly known as NPA) </li>
+                <li>Transnet Port Terminals (formerly known as Portnet, SAPO)</li>
+              </ul></div>
           </div>
           <div class="u-container-style u-tab-pane" id="link-tab-6219" role="tabpanel" aria-labelledby="tab-6219">
-            <div class="u-container-layout u-container-layout-5"></div>
+            <div class="u-container-layout u-container-layout-5"><h4 class="u-text u-text-default u-text-1">Description</h4>
+              <div class="u-align-left u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div><p class="u-text u-text-default u-text-2">We develop partnerships with leading companies and organizations
+              from around the globe to complement our expertise and deliver breakthrough results.&nbsp;We have
+              long-lasting partnerships and affiliations with like-minded organizations and leaders share our
+              commitment to deliver lasting results.</p>
+            <h4 class="u-text u-text-default u-text-3">information</h4>
+            <div class="u-border-3 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-line-2"></div>
+            <p class="u-text u-text-default u-text-4">Objectively innovate empowered manufactured products whereas
+              parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains.
+              Dramatically engage top-line web services vis-a-vis cutting-edge deliverables.</p></div>
           </div>
           <div class="u-container-style u-tab-pane" id="tab-f599" role="tabpanel" aria-labelledby="link-tab-f599">
-            <div class="u-container-layout u-container-layout-6"></div>
+            <div class="u-container-layout u-container-layout-6"><h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
+              <p class="u-text u-text-default u-text-6">In this article we will cover the BASICS of Who is Who and what
+                role they play in the South African Container Shipping industry..</p>
+              <ul class="u-text u-text-default u-text-7">
+                <li>Transnet Freight Rail (formerly known as Spoornet) </li>
+                <li>Transnet National Port Authority (formerly known as NPA) </li>
+                <li>Transnet Port Terminals (formerly known as Portnet, SAPO)</li>
+              </ul></div>
           </div>
         </div>
       </div>
@@ -324,13 +361,12 @@
           <div
             class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
             style="width: 150px; height: 150px;">
-            <img src="./images/logo.jpg" height="70" alt=""
-              loading="lazy" />
+            <img src="./images/logo.jpg" height="70" alt="" loading="lazy" />
           </div>
 
           <p class="text-center">Data science where the real magic begins and dreams comes ture </p>
 
-           <ul class="list-unstyled d-flex flex-row justify-content-center">
+          <ul class="list-unstyled d-flex flex-row justify-content-center">
             <!-- <li>
               <a class="text-white px-2" href="#!">
                 <i class="fa fa-facebook-square"></i>
@@ -349,7 +385,7 @@
             <a class="text-white px-2" href="#!">
               <i class="fa fa-linkedin-square"></i>
             </a>
-          </li>
+            </li>
           </ul>
 
         </div>
@@ -403,7 +439,7 @@
             </li>
             <!-- <li class="mb-2">
               <a href="#!" class="text-white"><i class="fa fa-solid fa-angle-right"> &nbsp </i>Volunteer activities</a>
-            </li> --> 
+            </li> -->
           </ul>
         </div>
 
@@ -436,7 +472,7 @@
     </div>
     <!-- Copyright -->
   </footer>
- 
+
   <!--        *************************Old footer********************************** -->
   <!-- <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-5185"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1"> © 2022 GitHub, Inc. All Rights Reserved.</p>
@@ -452,7 +488,7 @@
         <span></span>
       </a>. 
     </section> -->
-    <script src="./Scripts/Global.js"></script>
+  <script src="./Scripts/Global.js"></script>
 </body>
 
 </html>
