--- a/Services.html
+++ b/Services.html
@@ -156,14 +156,14 @@
             class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
-              <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6">
+              <ul class="text-left-mobileview u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6">
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="index.html"
                     style="padding: 10px 0px;">Home</a>
                 </li>
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="About.html"
                     style="padding: 10px 0px;">About</a>
                   <div class="u-nav-popup">
-                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-7">
+                    <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-7">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#carousel_b831"
                           data-page-id="48129665">About Us</a>
                       </li>
@@ -219,7 +219,7 @@
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Support.html"
                     style="padding: 10px 0px;">Support</a>
                   <div class="u-nav-popup">
-                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-10">
+                    <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-10">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Support.html#sec-b7e7"
                           data-page-id="521828048">FAQs</a>
                       </li>
