--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
             class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
-              <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-6">
+              <ul class="u-align-center text-left-mobileview u-nav u-popupmenu-items u-unstyled u-nav-6">
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="index.html"
                     style="padding: 10px 0px;">Home</a>
                 </li>
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="About.html"
                     style="padding: 10px 0px;">About</a>
                   <div class="u-nav-popup">
-                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-7">
+                    <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-7">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html#carousel_b831"
                           data-page-id="48129665">About Us</a>
                       </li>
@@ -188,7 +188,7 @@
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Industries.html"
                     style="padding: 10px 0px;">Industries</a>
                   <div class="u-nav-popup">
-                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-8">
+                    <ul class="text-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-8">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Industries.html#sec-ac3a"
                           data-page-id="976527205">Retail</a>
                       </li>
@@ -228,7 +228,7 @@
                 <li class="u-nav-item toMakeTextResponsive"><a class="u-button-style u-nav-link" href="Support.html"
                     style="padding: 10px 0px;">Support</a>
                   <div class="u-nav-popup">
-                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-10">
+                    <ul class="text-left-mobileview-paddingtext-left-mobileview-padding u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-10">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Support.html#sec-b7e7"
                           data-page-id="521828048">FAQs</a>
                       </li>
@@ -339,9 +339,9 @@
 
     </div>
   </section>
-  <section class="background_gif u-align-center u-clearfix u-white u-section-3" id="carousel_b13d">
+  <section class="background_gif u-align-center u-clearfix u-white u-section-3" id="carousel_b13d"> 
     <div class="u-clearfix u-sheet u-sheet-1">
-      <h2 class="u-align-center u-text u-text-default u-text-1">Key Features</h2>
+      <h2 class="u-align-center u-text u-text-default u-text-1">Services</h2>
       <p class="u-text u-text-2">Sample text. Click to select the text box. Click again or double click to start editing
         the text.</p>
 
@@ -349,10 +349,7 @@
         class=" responsive u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1"
         src="./images/dsf.jpg" data-image-width="1200" data-image-height="800">
         ></iframe>
-          
-
-
-
+        
       <div class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div
@@ -369,7 +366,7 @@
                   </path>
                 </svg>
               </span>
-              <h4 class="u-text u-text-4">Gather data</h4>
+              <h4 class="u-text u-text-4">Data Sciences</h4>
             </div>
 
           </div>
@@ -398,7 +395,7 @@
 
 
               </span>
-              <h4 class="u-text u-text-3">Develop</h4>
+              <h4 class="u-text u-text-3">Data Analysis</h4>
             </div>
           </div>
           <div
@@ -424,12 +421,13 @@
                   </path>
                 </svg>
               </span>
-              <h4 class="u-text u-text-5">Analyze</h4>
+              <h4 class="u-text u-text-5">Data Engineering</h4>
             </div>
           </div>
           <div
             class="u-align-center u-container-style u-list-item u-palette-2-base u-repeater-item u-shape-rectangle u-list-item-4">
-            <div class="u-container-layout u-similar-container u-container-layout-4"><span class="u-icon u-icon-4">
+            <div class="u-container-layout u-similar-container u-container-layout-4">
+              <span class="u-icon u-icon-4">
                 <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 128 128" style="">
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-0096"></use>
                 </svg>
@@ -443,15 +441,18 @@
                   </path>
                 </svg>
               </span>
-              <h4 class="u-text u-text-6">become productive</h4>
+              <h4 class="u-text u-text-6">Business Intelligence</h4>
             </div>
           </div>
         </div>
       </div>
+      <a href="index.html#carousel_64ac" data-page-id="2206810918"
+      class="u-btn u-border-none u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Read more</a>
     </div>
   </section>
   <section class="u-align-center u-clearfix u-gradient u-section-4" id="carousel_42c4">
     <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+      <h2 style="margin-left: 0px;" class="u-align-center u-text u-text-default u-text-1">Key features</h2>
       <div class="u-clearfix u-expanded-width u-gutter-18 u-layout-wrap u-layout-wrap-1">
         <div class="u-gutter-0 u-layout">
           <div class="u-layout-row">
@@ -637,12 +638,13 @@
             </div>
           </div>
         </div>
+      </div><a href="index.html#carousel_64ac" data-page-id="2206810918"
+      class="u-btn u-border-none u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Read more</a>
       </div>
-    </div>
   </section>
   <section class="u-clearfix u-grey-10 u-section-5" id="sec-0f57">
     <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
-      <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+      <div class="fixed_margin_top u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
         <div class="u-layout">
           <div class="u-layout-row">
             <div class="u-size-21">
@@ -675,6 +677,25 @@
                 </div>
               </div>
             </div>
+            <div
+            class=" responsive_card u-container-style u-gradient u-layout-cell u-right-cell u-size-20 u-size-30-md u-layout-cell-7">
+            <div class="u-container-layout u-valign-middle u-container-layout-7"><span
+                class="u-icon u-icon-circle u-text-white u-icon-1"><svg class="u-svg-link"
+                  preserveAspectRatio="xMidYMin slice" viewBox="0 -42 426.66667 426" style="">
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-e434"></use>
+                </svg><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -42 426.66667 426" id="svg-e434"
+                  class="u-svg-content">
+                  <path
+                    d="m373.332031.332031h-64c-29.417969 0-53.332031 23.9375-53.332031 53.335938v64c0 29.394531 23.914062 53.332031 53.332031 53.332031h64c3.648438 0 7.210938-.382812 10.667969-1.089844v43.757813c0 47.058593-38.273438 85.332031-85.332031 85.332031h-21.335938c-11.796875 0-21.332031 9.558594-21.332031 21.332031 0 11.777344 9.535156 21.335938 21.332031 21.335938h21.335938c70.589843 0 128-57.410157 128-128v-160c0-29.398438-23.914063-53.335938-53.335938-53.335938zm0 0">
+                  </path>
+                  <path
+                    d="m117.332031.332031h-64c-29.417969 0-53.332031 23.9375-53.332031 53.335938v64c0 29.394531 23.914062 53.332031 53.332031 53.332031h64c3.648438 0 7.210938-.382812 10.667969-1.089844v43.757813c0 47.058593-38.273438 85.332031-85.332031 85.332031h-21.335938c-11.796875 0-21.332031 9.558594-21.332031 21.332031 0 11.777344 9.535156 21.335938 21.332031 21.335938h21.335938c70.589843 0 128-57.410157 128-128v-160c0-29.398438-23.914063-53.335938-53.335938-53.335938zm0 0">
+                  </path>
+                </svg></span>
+              <h3 class="u-text u-text-body-alt-color u-text-default u-text-3">Teamwork is the ability to work
+                together toward a common vision.&nbsp;</h3>
+            </div>
+          </div>
             <div class="u-size-20">
               <div class="u-layout-col">
                 <div class="u-container-style u-layout-cell u-right-cell u-size-20 u-size-30-md u-layout-cell-6">
